syntax = "proto3";

package GrpcRatings;

service Ratings {
	rpc GetHostProminentStats(GetHostProminentStatsRequest) returns (ProminentHostStats);
	rpc GetRatings(GetRatingsRequest) returns (GetRatingsResponse);
	rpc GetGradesForUser(GradesRequest) returns (GradesResponse);

}

message GradesRequest {
  string userId = 1;
  string userRole = 2;
}

message GradesResponse {
  repeated int32 accommGrades = 1;
  repeated int32 hostGrades = 2;
}

message HostRating {
  string guestId = 3;
  int32 grade = 4;
  string dateTimeOfGrade = 5;
}

message AccommodationRating {
  string guestId = 3;
  int32 grade = 4;
  string dateTimeOfGrade = 5;
}

message GetRatingsRequest {
  string accommId = 1;
  string hostId = 3;
}

message GetRatingsResponse {
  repeated HostRating hostRatings = 1;
  repeated AccommodationRating accommodationRatings = 2;
  float avgHostGrade = 3;
  float avgAccomGrade = 4;
}

message GetHostProminentStatsRequest {
  string hostId = 1;
  string accommId = 2;
}

message ProminentHostStats {
  bool isHostProminent = 1;
  float avgHostGrade = 2;
  float avgAccommGrade = 3;
}